dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=bitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=bitcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
