dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=naviod.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=navio-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=navio-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=navio-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=navio-wallet.1
endif
endif
