dist_man1_MANS=

if BUILD_TORTOISECOIND
  dist_man1_MANS+=tortoisecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=tortoisecoin-qt.1
endif

if BUILD_TORTOISECOIN_CLI
  dist_man1_MANS+=tortoisecoin-cli.1
endif

if BUILD_TORTOISECOIN_TX
  dist_man1_MANS+=tortoisecoin-tx.1
endif

if BUILD_TORTOISECOIN_UTIL
  dist_man1_MANS+=tortoisecoin-util.1
endif

if ENABLE_WALLET
if BUILD_TORTOISECOIN_WALLET
  dist_man1_MANS+=tortoisecoin-wallet.1
endif
endif
